--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,16 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #222;
+  background-color: #333;
   color: #EEE;
 }
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  color: orange;
   text-decoration: none;
 }
 
