--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,15 @@ a:hover {
 * {
   box-sizing: border-box;
 }
+
+/* Bootstrap customization */
+.card {
+  background-color: #1e2936;
+}
+
+.card-title {
+  border-bottom: 1px solid #ddd;
+  color: orange;
+  padding-bottom: 5px;
+  text-align: right;
+}
