--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #333;
-  color: #EEE;
+  background-color: #FFF;
+  color: #4C5E73;
 }
 
 a {
