--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 @import "./fonts.scss";
 @import "./colors.scss";
+@import "~bootstrap/scss/bootstrap";
 
 * {
   box-sizing: border-box;
@@ -11,8 +12,8 @@ body {
   margin: 0;
   font-family: "CircularSTD", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #FFF;
-  color: #4C5E73;
+  background-color: var(--black900);
+  color: #FFF;
   font-size: 16px;
   height: 100%;
 }
@@ -38,7 +39,7 @@ h3 {
 }
 
 h4 {
-  color: #313C49;
+  color: #FFF;
   font-size: 30px;
   font-weight: 900;
   letter-spacing: -0.35px;
@@ -53,10 +54,6 @@ h6 {
   
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 a:hover {
   color: var(--primary500);
   text-decoration: none;
